[package]
name = "skunk-gatekeeper-parse-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.14", features = ["serde-well-known"] }
url = { version = "2.2.2", features = ["serde"] }

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
